[package]
name = "escrow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.8"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.8"
solana-sdk = "=1.7.8"
solana-validator = "=1.7.8"

[lib]
crate-type = ["cdylib", "lib"]
