[package]
name = "escrow-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_anchor"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/project-serum/anchor", branch = "master" }
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
